--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3207,10 +3207,14 @@ function detectHiContrast() {
       Similarly, ARIA design patterns borrow user expectations and keyboard conventions from those platforms, consistently incorporating common conventions with the aim of facilitating easy learning and efficient operation of keyboard interfaces across the web.
       </p>
       <p>
-      To be accessible, all interactive elements must be accessible via the keyboard.
-      In addition, consistent application of the common GUI keyboard interface conventions described in the <a href="#aria_ex">ARIA design patterns</a> is particularly important for assistive technology users. 
-      For instance, just as familiar visual styling helps users discover how to operate a component with a mouse, ARIA attributes enable screen readers to give components the sound and feel of their desktop counterparts.
-      For example, when screen reader users hear that a tree has focus, they will commonly expect that pressing the right arrow key will expand  a collapsed node. 
+      For a web page to be accessible, all interactive elements must be operable via the keyboard.
+      In addition, consistent application of the common GUI keyboard interface conventions described in the <a href="#aria_ex">ARIA design patterns</a> is important, especially  for assistive technology users. 
+      Consider, for example, a screen reader user operating a tree.
+      Just as familiar visual styling helps users discover how to expand a tree branch with a mouse, ARIA attributes give the tree the sound and feel of a tree in a desktop application.
+      So, screen reader users will commonly expect that pressing the right arrow key will expand  a collapsed node. 
+      Because the screen reader knows the element is a tree, it also has the ability to instruct a novice user how to operate it. 
+      Similarly, voice recognition software can implement commands for expanding and collapsing branches because it recognizes the element as a tree and can execute appropriate keyboard commands.
+      All this is only possible if the tree implements the GUI keyboard conventions as described in the <a href="#TreeView">ARIA tree pattern</a>.
       </p>
       <p>
       A primary keyboard navigation convention common across all platforms is that the <kbdd>tab</kbdd> and <kbd>shift+tab</kbd> keys move focus from one component or widget to another while other keys, primarily the arrow keys, move focus inside of components that include multiple focusable elements.
@@ -3225,11 +3229,10 @@ function detectHiContrast() {
       <p>
       The ARIA specification refers to a discrete UI component that contains multiple focusable elements as a <a href="#composite" class="role-reference">composite</a> widget.
       The process of controlling focus movement inside a composite is called managing focus. 
-      The ARIA design patterns that demonstrate focus management include all the composite widget roles plus toolbars and dialogs: 
+      Following are ARIA design patterns that demonstrate focus management:
       </p>
       <ul>
       <li><a href="#combobox">Combobox</a></li>
-      <li><a href="#dialogs">Dialogs</a></li>
       <li><a href="#grid">Grid</a></li>
       <li><a href="Listbox">Listbox</a></li>
       <li><a href="#menu">Menu or menu bar</a></li>
@@ -3288,7 +3291,7 @@ function detectHiContrast() {
      The default order of elements in the tab sequence is the order of elements in the DOM.
      The DOM order also determines screen reader reading order.
      It is important to keep the keyboard tab sequence and the screen reader reading order aligned. 
-     Thus, the most robust method of manipulating the order of the tab sequence that is currently available is to rearrange elements in the DOM.
+     Thus, the most robust method of manipulating the order of the tab sequence that is currently available in all browsers is rearranging elements in the DOM.
       </p>
      <p>The values of the tabindex attribute have the following effects. </p>
       <dl>
@@ -3305,9 +3308,9 @@ function detectHiContrast() {
       <section id="kbd_general_within">
       <h3> Keyboard Navigation within Widgets</h3>
       <p>
-      As described in section <a href="#kbd_generalnav"></a>, the tab sequence should include only one focusable descendant of a composite widget.
-      Once a composite widget contains focus, keys other than <kbd>Tab</kbd> and <kbe>Shift+Tab</kbe> enable the user to move focus among the focusable elements of the composite.
-      Authors are free to choose which keys move focus inside of a composite, but they are strongly advised to use the same key bindings as similar widgets in common GUI operating systems as demonstrated in <a href="#aria_ex"></a>.
+      As described in section <a href="#kbd_generalnav"></a>, the tab sequence should include only one focusable descendant of a composite component.
+      Once a composite contains focus, keys other than <kbd>Tab</kbd> and <kbe>Shift+Tab</kbe> enable the user to move focus among its focusable elements.
+      Authors are free to choose which keys move focus inside of a composite, but they are strongly advised to use the same key bindings as similar components in common GUI operating systems as demonstrated in <a href="#aria_ex"></a>.
       </p>
       <p>
       The convention for which focusable element within a composite that is included in the tab sequence depends on the type of composite.
@@ -3326,14 +3329,14 @@ function detectHiContrast() {
       </li>
       <li>
       The first element.
-      Widgets that usually follow this pattern include menubars and toolbars.
+      Components that usually follow this pattern include menubars and toolbars.
       </li>
       </ul>
       <p>
       The following sections explain the two strategies for managing focus in composite widgets: creating a roving tabindex and using the <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property. 
       </p>
       <section id="kbd_roving_tabindex">
-      <h5>Managing Focus in Composites with tabindex (Roving tabindex) </h5>
+      <h4>Managing Focus in Composites with tabindex (Roving tabindex) </h4>
       <p>
       When using roving tabindex to manage focus in a composite widget, the descendant element that is to be included in the tab sequence has tabindex of "0" and all other focusable elements contained in the composite have tabindex of "-1".
       The algorythm for the roving tabindex strategy is as follows. 
@@ -3352,17 +3355,15 @@ function detectHiContrast() {
       One benefit of using roving tabindex rather than aria-activedescendant to manage focus is that the user agent will scroll the newly focused element into view.
       </p>
     </section>
-      <section id="focus_activedescendant">
-      <h4> Using activedescendant to Manage Focus for Widget Children</h4>
+      <section id="kbd_focus_activedescendant">
+      <h4>Managing Focus in Composites with aria-activedescendant</h4>
       <p>
-      In addition to tabindex, WAI-ARIA provides  the <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property  for managing the focus of child elements within a widget. 
-      Widgets like <a class="role-reference" href="#grid">grid</a> and <a class="role-reference" href="#tree">tree</a> typically manage their children. 
+      The <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property  provides an alternative means for managing focus of elements within a composite or group.
       The root element of the widget should have a <code>tabindex</code> value greater than or equal to "0" to ensure that the widget is in the document tabbing order. 
       Rather than setting a key event handler on each element within a larger component, the event handler can be set on the parent element such as the tree. 
-      It is then the job of the parent element to manage the focus of the children. 
       </p>
       <p>
-      The parent may use the <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property to indicate the active child. 
+      The container uses the <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property to indicate the active child. 
       For example, the container element with the role of tree can provide an onkeydown event handler so that each individual tree item within the tree does not need to be focusable and to listen for the keydown event. 
       The container object, in this case the tree, needs to maintain the point of regard and manage which individual child item must be perceived as active.
       </p>
