--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3333,7 +3333,7 @@ function detectHiContrast() {
       </li>
       </ul>
       <p>
-      The following sections explain the two strategies for managing focus in composite widgets: creating a roving tabindex and using the <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property. 
+      The following sections explain two strategies for managing focus in composite widgets: creating a roving tabindex and using the aria-activedescendant property. 
       </p>
       <section id="kbd_roving_tabindex">
       <h4>Managing Focus in Composites with tabindex (Roving tabindex) </h4>
@@ -3350,6 +3350,10 @@ function detectHiContrast() {
                             <li>Set focus, <code>element.focus()</code>, on the element that has <code>tabindex="0"</code>.</li>
                         </ul>
                     </li>
+                    <li>If the design calls for a specific element to be focused when the user moves focus into the composite with <kbd>Tab<kbd> or <kbd>Shift+Tab</kbd>,
+                    check if that target element has <code>tabindex="0"</code> when the composite loses focus. 
+                     If it does not, set <code>tabindex="0"</code> on the target element and set <code>tabindex="-1"</code> on the element that previously had <code>tabindex="0"</code>.
+                    </li>
       </ul>
       <p>
       One benefit of using roving tabindex rather than aria-activedescendant to manage focus is that the user agent will scroll the newly focused element into view.
@@ -3358,34 +3362,54 @@ function detectHiContrast() {
       <section id="kbd_focus_activedescendant">
       <h4>Managing Focus in Composites with aria-activedescendant</h4>
       <p>
-      The <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property  provides an alternative means for managing focus of elements within a composite or group.
-      The root element of the widget should have a <code>tabindex</code> value greater than or equal to "0" to ensure that the widget is in the document tabbing order. 
-      Rather than setting a key event handler on each element within a larger component, the event handler can be set on the parent element such as the tree. 
+      If a component container has an ARIA role that supports the <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property, it is not necessary to manipulate the tabindex attribute and move DOM focus among focusable elements within the container.
+      Instead, only the container element needs to be included in the tab sequence. When the container has DOM focus, the value of aria-activedescendant on the container tells assistive technologies which element is active within the widget.
+      Assistive technologies will consider the element referred to as active to be the focused element even though DOM focus is on the element that has the aria-activedescendant property.
+      And, when the value of aria-activedescendant is changed, assistive technologies will receive focus change events equivalent to those received when DOM focus actually moves.
       </p>
       <p>
-      The container uses the <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property to indicate the active child. 
-      For example, the container element with the role of tree can provide an onkeydown event handler so that each individual tree item within the tree does not need to be focusable and to listen for the keydown event. 
-      The container object, in this case the tree, needs to maintain the point of regard and manage which individual child item must be perceived as active.
+      The steps for using the aria-activedescendant method of managing focus are as follows.
       </p>
-        <p>
-        Important: For a given container widget where activedescendant must cause focus events to be fired to ATs, the actual focus must be on the container widget itself. 
-        In HTML this is done by putting tabindex="0" on the container widget.
-        </p>
+      <ul>
+      <li>When the container element that has a role that supports aria-activedescendant is loaded or created, ensure that:
+      <ul>
+      <li>The container element is included in the tab sequence as described in <a href="#kbd_general_between"></a> or it is otherwise focusable as described in <a href="#kbd_nested_components"></a>.</li>
+      <li>It has <code>aria-activedescendant="IDREF"</code> where IDREF is the ID of the element within the container that should be identified as active when the widget receives focus. The referenced element needs to meet the DOM relationship requirements described below.</li>
+      </ul>
+      </li>
+      <li>When the container element receives DOM focus, draw a visual focus indicator on the active element and ensure the active element is scrolled into view. See section <a href="#scrollintoview">Managing Focus with Scroll</a> below for more information.
+      </li>
+      <li>When the composite widget contains focus and the user presses a navigation key that moves focus within the widget, such as an arrow key:
+      <ul>
+      <li>Change the value of aria-activedescendant on the container to refer to the element that should be reported to assistive technologies as active.</li>
+      <li>Move the visual focus indicator and, if necessary,  scrolled the active element into view.</li>
+      </ul>
+      </li>
+      <li>If the design calls for a specific element to be focused when the user moves focus into the composite with <kbd>Tab<kbd> or <kbd>Shift+Tab</kbd>,
+                    check if aria-activedescendant is referring to that target element when the container loses focus. 
+                     If it is not, set aria-activedescendant to refer to the target element.
+                    </li>
+      </ul>
       <p>
-      The key handler on the parent captures the keystrokes and determines what item becomes active next and updates the <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property with the ID of the appropriate, next active child element. 
-      The browser takes that ID information and generates the focus event to the assistive technology. 
-      Each individual element does not have to be made focusable via a <code>tabindex</code> value of -1, but it must be styled using CSS to indicate the active status.
+      The <a href="#aria-activedescendant" class="property-reference">specification for aria-activedescendant</a> places important restrictions on the DOM relationship between the focused element that has the aria-adtivedescendant attribute and the element referenced as active by the value of the attribute.
+      One of the following three conditions must be met.
       </p>
-      <p>
-      One benefit of using tabindex to manage focus on an element is that the user agent will scroll the element into view when focus is set to the it. 
-      This is not the case for <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a>. 
-      When setting or updating the <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property, e.g. 
-      <code>aria-activedescendant="cell23"</code>, authors must ensure that the   element with <code>id="cell23"</code> is in view. 
-      </p>
-      <p>
-      As active status is moved to the next descendant, ensure that it is scrolled into view using <code>scrollIntoView()</code>.  
-      See section <a href="#scrollintoview">Managing Focus with Scroll</a> below for more information.
-      </p>
+      <ol>
+      <li>The element referenced as active is a DOM descendant of the focused referencing element.</li>
+      <li>The focused referencing element has a value specified for the <a href="#aria-owns" class="property-reference">aria-owns</a> property that includes the ID of the element referenced as active. </li>
+      <li>The focused referencing element has role of <a href="#textbox" class="role-reference">textbox</a> and has <a href="#aria-controls" class="property-reference">aria-controls</a> property referring to an element with a role that supports aria-activedescendant and either:
+      <ol>
+      <li>The element referenced as active is a descendant of the controlled element.</li>
+      <li>The controlled element has a value specified for the <a href="#aria-owns" class="property-reference">aria-owns</a> property that includes the ID of the element referenced as active. </li>
+      </ol>
+      </li>
+      </ol>
+    </section>
+    <section id="kbd_nested_components">
+    <h4>Nested Components - Composites and Toolbars That Contain Composites</h4>
+    <p>
+    to be written
+    </p>
     </section>
     <section id="scrollintoview">
       <h5>Managing Focus with Scroll</h5>
